nouvelle version gkit nouveau premake4.lua, opengl downgrade to 3

--- a/gKit2/Makefile
+++ b/gKit2/Makefile
@@ -6,38 +6,108 @@ ifndef config
 endif
 export config
 
-PROJECTS := main tuto_miniOBJ tp1 tp2 tp2grid
+PROJECTS := tutorial1 tutorial2 tutorial3 image_viewer mesh_viewer shader_kit compute_kit filter_tutorial1 filter_compute_tutorial1 tp1 tp1sphere_reyes tp1shader batch_perf tessellation_tuto tessellation_sphere compute_tutorial1 compute_tutorial2 compute_tutorial3 mini_gl3core
 
 .PHONY: all clean help $(PROJECTS)
 
 all: $(PROJECTS)
 
-main: 
-	@echo "==== Building main ($(config)) ===="
-	@${MAKE} --no-print-directory -C . -f main.make
+tutorial1: 
+	@echo "==== Building tutorial1 ($(config)) ===="
+	@${MAKE} --no-print-directory -C . -f tutorial1.make
 
-tuto_miniOBJ: 
-	@echo "==== Building tuto_miniOBJ ($(config)) ===="
-	@${MAKE} --no-print-directory -C . -f tuto_miniOBJ.make
+tutorial2: 
+	@echo "==== Building tutorial2 ($(config)) ===="
+	@${MAKE} --no-print-directory -C . -f tutorial2.make
+
+tutorial3: 
+	@echo "==== Building tutorial3 ($(config)) ===="
+	@${MAKE} --no-print-directory -C . -f tutorial3.make
+
+image_viewer: 
+	@echo "==== Building image_viewer ($(config)) ===="
+	@${MAKE} --no-print-directory -C . -f image_viewer.make
+
+mesh_viewer: 
+	@echo "==== Building mesh_viewer ($(config)) ===="
+	@${MAKE} --no-print-directory -C . -f mesh_viewer.make
+
+shader_kit: 
+	@echo "==== Building shader_kit ($(config)) ===="
+	@${MAKE} --no-print-directory -C . -f shader_kit.make
+
+compute_kit: 
+	@echo "==== Building compute_kit ($(config)) ===="
+	@${MAKE} --no-print-directory -C . -f compute_kit.make
+
+filter_tutorial1: 
+	@echo "==== Building filter_tutorial1 ($(config)) ===="
+	@${MAKE} --no-print-directory -C . -f filter_tutorial1.make
+
+filter_compute_tutorial1: 
+	@echo "==== Building filter_compute_tutorial1 ($(config)) ===="
+	@${MAKE} --no-print-directory -C . -f filter_compute_tutorial1.make
 
 tp1: 
 	@echo "==== Building tp1 ($(config)) ===="
 	@${MAKE} --no-print-directory -C . -f tp1.make
 
-tp2: 
-	@echo "==== Building tp2 ($(config)) ===="
-	@${MAKE} --no-print-directory -C . -f tp2.make
+tp1sphere_reyes: 
+	@echo "==== Building tp1sphere_reyes ($(config)) ===="
+	@${MAKE} --no-print-directory -C . -f tp1sphere_reyes.make
 
-tp2grid: 
-	@echo "==== Building tp2grid ($(config)) ===="
-	@${MAKE} --no-print-directory -C . -f tp2grid.make
+tp1shader: 
+	@echo "==== Building tp1shader ($(config)) ===="
+	@${MAKE} --no-print-directory -C . -f tp1shader.make
+
+batch_perf: 
+	@echo "==== Building batch_perf ($(config)) ===="
+	@${MAKE} --no-print-directory -C . -f batch_perf.make
+
+tessellation_tuto: 
+	@echo "==== Building tessellation_tuto ($(config)) ===="
+	@${MAKE} --no-print-directory -C . -f tessellation_tuto.make
+
+tessellation_sphere: 
+	@echo "==== Building tessellation_sphere ($(config)) ===="
+	@${MAKE} --no-print-directory -C . -f tessellation_sphere.make
+
+compute_tutorial1: 
+	@echo "==== Building compute_tutorial1 ($(config)) ===="
+	@${MAKE} --no-print-directory -C . -f compute_tutorial1.make
+
+compute_tutorial2: 
+	@echo "==== Building compute_tutorial2 ($(config)) ===="
+	@${MAKE} --no-print-directory -C . -f compute_tutorial2.make
+
+compute_tutorial3: 
+	@echo "==== Building compute_tutorial3 ($(config)) ===="
+	@${MAKE} --no-print-directory -C . -f compute_tutorial3.make
+
+mini_gl3core: 
+	@echo "==== Building mini_gl3core ($(config)) ===="
+	@${MAKE} --no-print-directory -C . -f mini_gl3core.make
 
 clean:
-	@${MAKE} --no-print-directory -C . -f main.make clean
-	@${MAKE} --no-print-directory -C . -f tuto_miniOBJ.make clean
+	@${MAKE} --no-print-directory -C . -f tutorial1.make clean
+	@${MAKE} --no-print-directory -C . -f tutorial2.make clean
+	@${MAKE} --no-print-directory -C . -f tutorial3.make clean
+	@${MAKE} --no-print-directory -C . -f image_viewer.make clean
+	@${MAKE} --no-print-directory -C . -f mesh_viewer.make clean
+	@${MAKE} --no-print-directory -C . -f shader_kit.make clean
+	@${MAKE} --no-print-directory -C . -f compute_kit.make clean
+	@${MAKE} --no-print-directory -C . -f filter_tutorial1.make clean
+	@${MAKE} --no-print-directory -C . -f filter_compute_tutorial1.make clean
 	@${MAKE} --no-print-directory -C . -f tp1.make clean
-	@${MAKE} --no-print-directory -C . -f tp2.make clean
-	@${MAKE} --no-print-directory -C . -f tp2grid.make clean
+	@${MAKE} --no-print-directory -C . -f tp1sphere_reyes.make clean
+	@${MAKE} --no-print-directory -C . -f tp1shader.make clean
+	@${MAKE} --no-print-directory -C . -f batch_perf.make clean
+	@${MAKE} --no-print-directory -C . -f tessellation_tuto.make clean
+	@${MAKE} --no-print-directory -C . -f tessellation_sphere.make clean
+	@${MAKE} --no-print-directory -C . -f compute_tutorial1.make clean
+	@${MAKE} --no-print-directory -C . -f compute_tutorial2.make clean
+	@${MAKE} --no-print-directory -C . -f compute_tutorial3.make clean
+	@${MAKE} --no-print-directory -C . -f mini_gl3core.make clean
 
 help:
 	@echo "Usage: make [config=name] [target]"
@@ -45,15 +115,28 @@ help:
 	@echo "CONFIGURATIONS:"
 	@echo "   debug"
 	@echo "   release"
-	@echo "   gprof"
 	@echo ""
 	@echo "TARGETS:"
 	@echo "   all (default)"
 	@echo "   clean"
-	@echo "   main"
-	@echo "   tuto_miniOBJ"
+	@echo "   tutorial1"
+	@echo "   tutorial2"
+	@echo "   tutorial3"
+	@echo "   image_viewer"
+	@echo "   mesh_viewer"
+	@echo "   shader_kit"
+	@echo "   compute_kit"
+	@echo "   filter_tutorial1"
+	@echo "   filter_compute_tutorial1"
 	@echo "   tp1"
-	@echo "   tp2"
-	@echo "   tp2grid"
+	@echo "   tp1sphere_reyes"
+	@echo "   tp1shader"
+	@echo "   batch_perf"
+	@echo "   tessellation_tuto"
+	@echo "   tessellation_sphere"
+	@echo "   compute_tutorial1"
+	@echo "   compute_tutorial2"
+	@echo "   compute_tutorial3"
+	@echo "   mini_gl3core"
 	@echo ""
 	@echo "For more information, see http://industriousone.com/premake/quick-start"
