shaders included, files updated, before local removal

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ gKit2/SDL_ttf
 gKit2/glew-1.11.0.tgz
 gKit2/tp1
 gKit2/tp2
+gKit2-alien.zip
+gkit2_nautibus32.tar.gz
+gKit2_tp1nautibus.tar.gz
+OpenGL-tutorial_v0014_33/
+support-papers/  
+tutorials/
